--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
