--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bullmq": "^5.15.0",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
