--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "bullmq": "^5.15.0",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
